--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GirishWakode-Hub.github.io/VIfinance",
+  "homepage": "https://GirishWakode-Hub.github.io/vffinance",
   "name": "vsfinance",
   "version": "0.1.0",
   "private": true,
