--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://GirishWakode-Hub.github.io/vffinance",
-  "name": "vsfinance",
+  "homepage": "https://GirishWakode-Hub.github.io/VIfinance",
+  "name": "vifinance",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
